# OpenInjector

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  OpenInjector.kdev4  README.md  main.cpp
.kdev4/: OpenInjector.kdev4
include/: binary.h  injector.h  statistics.h  tester-sapi.sapi.h  tester-sapi_embed.h  tester.h
src/: binary.cpp  injector.cpp  main.cpp  statistics.cpp  tester.cpp  tester_sandbox.cpp
utils/faulted_programs/: array_sum.c  compile.sh  hello
utils/faulted_programs/array_sum_dir/: array_sum.c  array_sum_hdnd.c
utils/python_scripts/: csv2img.py  statistics.csv
